samples/_failures_safe/1761788383_1c4e66_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b70bfc03.c: In function ‘main’:
./samples/SAFE/__tmp_b70bfc03.c:149:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  149 |     size_t decompressed_size
      |     ^~~~~~
./samples/SAFE/__tmp_b70bfc03.c:149:5: error: expected declaration or statement at end of input
